<resources>
    <string name="app_name">FindMyPet</string>
    <string name="facebook_app_id">2339450316369743</string>
    <string name="fb_login_protocol_scheme">fb2339450316369743</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>

    <string name="add_post">Add Post!</string>
    <string name="type">Select Type : </string>
    <string name="logout">Log out</string>

    <!--array-->
    <string-array name="type_pet">
        <item>Dog</item>
        <item>Cat</item>
        <item>Other</item>
    </string-array>

    <!--navbar-->
    <string name="profile">My Profile</string>
    <string name="post">My Post</string>
    <string name="mylist">My List</string>
    <string name="home">Home</string>
    <string name="list">....</string>

    <string name="next1">เลื่อนขวา</string>
    <string name="next2">เลื่อนขวาอีก</string>
    <string name="next3">เลื่อนขวาอีกๆ</string>

    <!--navigation-->
    <string name="open_nav">Open Navigation bar</string>
    <string name="close_nav">Close Navigation bar</string>


    <!--home tab view-->
    <string name="dog">"Dog"</string>
    <string name="cat">Cat</string>
    <string name="other">Other</string>

    <!--post topic, detail-->
    <string name="post_topic">Find My Pet</string>
    <string name="post_title">Title  :  </string>
    <string name="post_description">Description</string>
    <string name="post_location">Location  :  </string>
    <string name="post_tel">Tel  :  </string>
    <string name="post_click">Adopt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
