<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="Navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item android:id="@+id/nav_profile"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item android:id="@+id/nav_post"
            android:enabled="true"
            android:icon="@drawable/ic_mypost"
            android:title="@string/post"/>

        <item android:id="@+id/nav_list"
            android:enabled="true"
            android:icon="@drawable/ic_heart"
            android:title="@string/mylist"/>

    </group>

</menu>