<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dog"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/andika"
        android:textColor="@color/colorFont"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_weight="1" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cat"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/andika"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:textColor="@color/colorFont"
        android:layout_weight="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorFont"
        android:fontFamily="@font/andika"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_weight="1" />

</LinearLayout>